# ImageFeatureDetector

./: .gitignore  CMakeLists.txt  README.md  aboutWindow.ui  barFeaturesSurf.ui  captureWebcamWindow.ui  do4Window.ui  fastRealTimeWindow.ui  featureFASTWindow.ui  featureHarrisWindow.ui  featureSIFTWindow.ui  featureSURFWindow.ui  icons.qrc  imageWindow.ui  images.qrc  mainWindow.ui  mainWindowOLD.ui  preferencesWindow.ui  startupWindow.ui  windowAbout.cpp  windowAbout.h  windowCaptureWebcam.cpp  windowCaptureWebcam.h  windowDo4.cpp  windowDo4.h  windowDo4.ui  windowFastRealTime.cpp  windowFastRealTime.h  windowFastRealTime.ui  windowImage.cpp  windowImage.h  windowImage.ui  windowMain.cpp  windowMain.h  windowMain.ui  windowPreferences.cpp  windowPreferences.h  windowStartup.cpp  windowStartup.h  windowStartup.ui
readmeImages/: IFD Screenshots.psd
src/: main.cpp  windowAbout.cpp  windowCaptureWebcam.cpp  windowCaptureWebcam.h  windowDo4.cpp  windowDo4.h  windowFastRealTime.cpp  windowFastRealTime.h  windowImage.cpp  windowImage.h  windowMain.cpp  windowMain.h  windowPreferences.h  windowStartup.cpp  windowStartup.h
ui/: barFeaturesFast.ui  barFeaturesHarris.ui  barFeaturesSift.ui  barFeaturesSurf.ui  windowAbout.ui  windowCaptureWebcam.ui  windowPreferences.ui
